--- a/apps/docs/components/landing.mdx
+++ b/apps/docs/components/landing.mdx
@@ -1,7 +1,13 @@
 ---
-title: hosgeldin yarrr
-description: This frontmatter description will appear below the title
+title: Welcome to Nexys Docs
+description: This documentation will introduce and help you to get started with Nexys client library.
 id: landing
 ---
 
-fdgdf
+<img src="/nexsy_transparent.png" width="100" height="200" align="center" />
+
+<br/>
+
+- Nexys is being built as logging library alternative for other third party apps. We will update docs as we go.
+- Select the field you are interested from the left menu to get started.
+- We are sorry that we couldnt build a better docs for now. We will update it as we go.
