--- a/apps/docs/docs/getting-started.mdx
+++ b/apps/docs/docs/getting-started.mdx
@@ -2,6 +2,7 @@
 title: Example Post
 description: This frontmatter description will appear below the title
 id: getting-started
+category: intro
 ---
 
 test!! **selam**
