[feat] new features

--- a/apps/docs/docs/home.mdx
+++ b/apps/docs/docs/home.mdx
@@ -1,14 +1,20 @@
+---
+title: Home
+description: This documentation will introduce and help you to get started with Nexys client library.
+id: home
+category: home
+order: 0
+---
+
 <p align="center">
   <img src="https://imgur.com/IkAXIz8.png" width="400" />
 </p>
 <p align="center">
-  <span>
-    <img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" />
-    <img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" />
-    <img src="https://img.shields.io/badge/next.js-000000?style=for-the-badge&logo=nextdotjs&logoColor=white" />
-    <img src="https://img.shields.io/badge/Node.js-339933?style=for-the-badge&logo=nodedotjs&logoColor=white" />
-    <img src="https://img.shields.io/badge/License-Apache_2.0-blue.svg" />
-  </span>
+  <img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" />
+  <img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" />
+  <img src="https://img.shields.io/badge/next.js-000000?style=for-the-badge&logo=nextdotjs&logoColor=white" />
+  <img src="https://img.shields.io/badge/Node.js-339933?style=for-the-badge&logo=nodedotjs&logoColor=white" />
+  <img src="https://img.shields.io/badge/License-Apache_2.0-blue.svg" />
 </p>
 
 <h1 align="center">Nexys</h1>
@@ -49,10 +55,6 @@ nexys.log("and start logging!");
 ```javascript
 throw new Error("I should be able to see this error on dashboard");
 ```
-
-# Documentation
-
-[View Nexys documentation here](https://docs.nexys.app)
 
 # Changelog (client library)
 
