[feat] new page on docs

--- a/apps/docs/docs/options.mdx
+++ b/apps/docs/docs/options.mdx
@@ -10,7 +10,7 @@ You might need to configure Nexys Client Library for best results.
 ```javascript
 import Nexys from "nexys";
 
-const nexys = new Nexys("API_KEY", { appName: "APP_NAME" });
+const nexys: Nexys = new Nexys("API_KEY", { appName: "APP_NAME" });
 ```
 
 While declaring a new Nexys instance, you can enter few options inside second parameter of constructor.
