--- a/apps/docs/docs/home.mdx
+++ b/apps/docs/docs/home.mdx
@@ -7,7 +7,7 @@ order: 0
 ---
 
 <p align="center">
-  <img src="https://imgur.com/IkAXIz8.png" width="400" />
+  <img src="https://imgur.com/DxcGlDs.png" width="400" />
 </p>
 <p align="center">
   <img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" />
