--- a/apps/docs/docs/home.mdx
+++ b/apps/docs/docs/home.mdx
@@ -31,34 +31,4 @@ We currently support NextJS and React platforms. We will support NodeJS and Reac
 
 # Let's get you started!
 
-### Install Nexys Client Library with npm
-
-```bash
-npm install nexys
-```
-
-### Import Nexys to your project
-
-```javascript
-import Nexys from "nexys";
-```
-
-### Then initialize Nexys
-
-```javascript
-const nexys = new Nexys("API_KEY", { appName: "APP_NAME" });
-nexys.log("and start logging!");
-```
-
-### Throw an error to see automatic error handling
-
-```javascript
-throw new Error("I should be able to see this error on dashboard");
-```
-
-# Changelog (client library)
-
-- 1.0.3 - i forgot what i did but i added alot of new features - 27.01.2023
-- 1.0.2 - connected to dashboard - 25.01.2023
-- 1.0.1 - some fixes and features - 14.01.2023
-- 1.0.0 - initial release - 13.01.2023
+### Get started by pressing buttons on the left
