--- a/apps/docs/docs/installation.mdx
+++ b/apps/docs/docs/installation.mdx
@@ -20,7 +20,7 @@ import Nexys from "nexys";
 ## Then initialize Nexys
 
 ```javascript
-const nexys = new Nexys("API_KEY", { appName: "APP_NAME" });
+const nexys: Nexys = new Nexys("API_KEY", { appName: "APP_NAME" });
 ```
 
 ## Start logging!
