--- a/apps/docs/docs/options.mdx
+++ b/apps/docs/docs/options.mdx
@@ -42,7 +42,7 @@ export const nexys: Nexys = new Nexys("API_KEY", {
 
 # sendAllOnType
 
-- `Optional` - `logOptionTypes | logOptionTypes[] | false` - Ignores logPoolSize when any log with specified type is recieved sends data to API - Default is `["AUTO:ERROR", "AUTO:UNHANDLEDREJECTION"]`
+- `Optional` - `logOptionTypes | logOptionTypes[] | false` - Ignores logPoolSize when any log with specified type is recieved sends data to API - Default is `["AUTO:ERROR", "AUTO:UNHANDLEDREJECTION", "ERROR"]`
 
 # ignoreType
 
