--- a/apps/docs/docs/options.mdx
+++ b/apps/docs/docs/options.mdx
@@ -58,7 +58,11 @@ export const nexys: Nexys = new Nexys("API_KEY", {
 
 # allowDeviceData
 
-- `Optional` - `boolean` - Should send device data - Disable if you dont want your users to get notified for geolocation - Default is `true`
+- `Optional` - `boolean` - Should send device data - Default is `true`
+
+# allowGeoLocation
+
+- `Optional` - `boolean` - Should send geo location data - Default is `false`
 
 # localStorage
 
